agregué avance de problema 5

--- a/TORRES ESPINOSA HIRAM ISAI_TAREA5.tex
+++ b/TORRES ESPINOSA HIRAM ISAI_TAREA5.tex
@@ -128,8 +128,30 @@ Calcule el volumen final (en mL) de la burbuja si su volumen inicial fue de 2.1 
 \end{multicols}
 
 
-\section{Problema 5}
+\section{Problema 5 Ley de Gay-Lussac}
 
+El argón es un gas inerte que se utiliza en los focos para retrasar la vaporización del filamento. Un
+cierto foco tiene argón a 1.2 atm y 18°C se calienta a 85°C a volumen constante. Calcule su presión
+final (en atm).
+
+\begin{multicols}{2}
+\large \textbf{Datos:}
+\begin{itemize}
+    \item $P_1 = 1.2 atm$
+    \item $T_1 = 18°C (291.15K)$
+    \item $P_2 = ?$
+    \item $T_2 = 85°C (358.15 K)$
+\end{itemize}
+\columnbreak
+
+
+\large \textbf{Procedimiento:}\\
+
+\large {$\frac{P_1}{T_1} = \frac{P_2}{T_2}$}
+
+
+
+\end{multicols}
 
 
 
