--- a/TORRES ESPINOSA HIRAM ISAI_TAREA5.tex
+++ b/TORRES ESPINOSA HIRAM ISAI_TAREA5.tex
@@ -147,13 +147,13 @@ final (en atm).
 
 \large \textbf{Procedimiento:}\\
 
-\large {$\frac{P_1}{T_1} = \frac{P_2}{T_2}$}\\
+\large $\frac{P_1}{T_1} = \frac{P_2}{T_2}$\\
 
-\large {$P_2 = \frac{P_1T_2}{T_1}}\\
+\large $P_2 = \frac{P_1T_2}{T_1}$ \\
 
-\large {$P_2 = \frac{(121.59Kpa)(359.15K)}{(291.15K)}}$}\\
+\large $P_2 = \frac{(121.59Kpa)(359.15K)}{(291.15K)}$ \\
 
-\ ul \large {$P_2 = 1.476 $}
+\ul {\large $P_2 = 1.476 $}
 
 
 
