cambios en tarea 10

--- a/Tarea 10/Tarea10.ipynb
+++ b/Tarea 10/Tarea10.ipynb
@@ -12,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def interpolacion (a,b):\n",
+    "    return"
+   ]
   },
   {
    "cell_type": "code",
