--- a/Tarea 10/Tarea10.ipynb
+++ b/Tarea 10/Tarea10.ipynb
@@ -9,12 +9,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpolacion (a,b):\n",
-    "    return"
+    "def interpolacion (y1,x,x1,y2,x2):\n",
+    "    return y1+(x-x1)*((y2-y1)/(x2-x1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.81570996978852\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = float(input(\"Valor x:\"))\n",
+    "x1 = float(input(\"Valor x1:\"))\n",
+    "x2 = float(input(\"Valor x2:\"))\n",
+    "y1 = float(input(\"Valor y1:\"))\n",
+    "y2 = float(input(\"Valor y2:\"))\n",
+    "resultado = interpolacion(y1,x,x1,y2,x2)\n",
+    "print(resultado)"
    ]
   },
   {
@@ -35,7 +58,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.7"
   },
   "orig_nbformat": 4
